// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with default prop values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-white shadow"
      >
        <div
          class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8"
        >
          <h1
            class="text-3xl font-bold tracking-tight text-gray-900"
          >
            ...
          </h1>
        </div>
      </header>
      <main>
        <div
          class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8"
        >
          <div
            class="px-4 py-6 sm:px-0"
          >
            <div
              class="h-96 rounded-lg bg-white flex justify-center items-center animate-pulse"
            >
              <div
                class="text-7xl"
              >
                ...
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-white shadow"
    >
      <div
        class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8"
      >
        <h1
          class="text-3xl font-bold tracking-tight text-gray-900"
        >
          ...
        </h1>
      </div>
    </header>
    <main>
      <div
        class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8"
      >
        <div
          class="px-4 py-6 sm:px-0"
        >
          <div
            class="h-96 rounded-lg bg-white flex justify-center items-center animate-pulse"
          >
            <div
              class="text-7xl"
            >
              ...
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders correctly with heading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-white shadow"
      >
        <div
          class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8"
        >
          <h1
            class="text-3xl font-bold tracking-tight text-gray-900"
          >
            Content
          </h1>
        </div>
      </header>
      <main>
        <div
          class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8"
        >
          <div
            class="px-4 py-6 sm:px-0"
          >
            <div
              class="h-96 rounded-lg bg-white flex justify-center items-center animate-pulse"
            >
              <div
                class="text-7xl"
              >
                ...
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-white shadow"
    >
      <div
        class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8"
      >
        <h1
          class="text-3xl font-bold tracking-tight text-gray-900"
        >
          Content
        </h1>
      </div>
    </header>
    <main>
      <div
        class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8"
      >
        <div
          class="px-4 py-6 sm:px-0"
        >
          <div
            class="h-96 rounded-lg bg-white flex justify-center items-center animate-pulse"
          >
            <div
              class="text-7xl"
            >
              ...
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
